--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Slate theme
-description: Slate is a theme for GitHub Pages.
+title: CS766-project-2024-Spring
+description: final project webpage
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-slate
